--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Clickertest"
         tools:targetApi="31">
         <activity
-            android:name=".researches"
+            android:name=".Researches"
             android:exported="false" />
         <activity
             android:name=".MarketActivity"
